<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_title"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/common_title"
        >

        <TextView
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_city"
            android:textSize="15sp"
            android:id="@+id/textView2" />

        <EditText
            android:id="@+id/etSearchCity"
            android:layout_width="60dp"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/search_city_hint"
            android:background="@color/common_white"
            />



        <TextView
            android:layout_marginLeft="25dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:text="@string/search_keyword"
            android:textSize="15sp"
            />

        <EditText
            android:id="@+id/etSearchKeyword"
            android:layout_width="120dp"
            android:maxLines="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:hint="@string/search_keyword_hint"
            android:background="@color/common_white"
            />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/nearby_search_textbox_style"
            />
        <Button
            android:id="@+id/btn_destory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"


            />
    </LinearLayout>


    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/common_white"
        >


    </ListView>




</LinearLayout>